[workspace]
members = [
    "packages/bull_sdk/rust",
]
exclude = [
    "packages/ark-wallet/rust",
    "packages/bbqr/rust",
    "packages/bitbox/rust",
    "packages/boltz/rust",
    "packages/lwk/rust",
]
resolver = "2"

[profile.dev]
debug = false

[profile.release]
debug = false
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
